I added a testing thing with sliders to see if the inference engine is working. It's not :(